kubernetes/02-ingress/01-dep-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-nginx-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app3-nginx
  template:
    metadata:
      labels:
        app: app3-nginx
    spec:
      containers:
      - name: app3-nginx
        image: stacksimplify/kubenginx:1.0.0
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app3-nginx-nodeport-service
  labels:
    app: app3-nginx
  annotations:
spec:
  type: NodePort
  selector:
    app: app3-nginx
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app3-nginx-nodeport-service-lb
spec:
  selector:
    app: app3-nginx
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
