kubernetes/02-ingress/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-basics
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  # ingressClassName: "gce" Although the kubernetes.io/ingress.class annotation is deprecated in Kubernetes, GKE continues to use this annotation. 
                       #You cannot use the ingressClassName field to specify a GKE Ingress. You must use the kubernetes.io/ingress.class annotation.
  defaultBackend:
    service: 
      name: app3-nginx-nodeport-service
      port: 
        number: 80
